--- a/learning/todo_list/index.html
+++ b/learning/todo_list/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <link
       rel="stylesheet"
