Update on my homework

--- a/learning/table_list/index.html
+++ b/learning/table_list/index.html
@@ -60,6 +60,11 @@
           <td></td>
           <td>Zhang</td>
         </tr>
+        <tr>
+          <td>Kyle</td>
+          <td></td>
+          <td>Le</td>
+        </tr>
       </tbody>
     </table>
   </body>
